[Major] Privilege refactorings, remove unused services and actions